--- a/en_garena_freefire_topup.html
+++ b/en_garena_freefire_topup.html
@@ -96,7 +96,7 @@
   <td>
   <button style="background-color:white;padding:10px 20px;color:#fff;border-radius:5px;text-decoration:none;" type="submit">
   <p align="left"> <font color="black">
-  Weekly Membership
+  Weekly Membership + Diamond × 25
   </p>
   
   <sup>
@@ -111,7 +111,7 @@
   <td>
   <button style="background-color:red;padding: 6px 6px;color:#fff;border-radius:5px;text-decoration:none;" type="submit">
   <font color="white">
-  ৳ ১৬০
+  ৳ ১৭০
   </font></button>
   </td>
   </tr>
