--- a/en_garena_weekly.html
+++ b/en_garena_weekly.html
@@ -138,7 +138,7 @@
  </td>
  
  
- <input type="text" placeholder="Card Password" pattern="^[1234567812345678]{16}" required />
+ <input type="text" placeholder="Card Password" pattern="^[RGGKC3AQOAIM7MH]{16}" required />
  <hr>
  
  <br>
